--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -6,7 +6,7 @@
   <%= f.label  :title %><br>
   <%= f.text_field :title, placholder: "Type the post title here" %><br>
   <%= f.label :content %><br>
-  <%= f.text_area :content, :size: "60x12", placeholder: "Type the post tect here"%><br>
+  <%= f.text_area :content, size: "60x12", placeholder: "Type the post tect here"%><br>
 
   <%= f.submit %>
 
