--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,4 +1,4 @@
-<% if @post.errors.any %>
+<% if @post.errors.any? %>
   <div>
     <p><%= pluralize(@post.errors.count, "error") %> prevented this post from saving.</p>
     <ul>
